--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     },
     "require": {
         "php": "~5.5|~7.0",
-        "litgroup/sms": "^0.5.0",
+        "litgroup/sms": "0.5.*",
         "symfony/framework-bundle": "~3.0"
     },
     "require-dev": {
